syntax = "proto3";
package server_proto;
option go_package=".;server_proto";

message CreateUserRequest {
	string first_name = 1;
	string last_name = 2;
	string email = 3;
	string designation = 4;
}

message UpdateUserRequest {
	string user_id = 1;
	string email = 2;
}

message UserDetailsResponse {
	string user_id = 1;
	string employee_id = 2;
	string first_name = 3;
	string last_name = 4;
	string email = 5;
	string designation = 6;
}